# 2DGraphics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compDir.save  main.cpp  shaderCompiler.py
OpenGL/: CMakeLists.txt  main.cpp
OpenGL/assets/shaders/basic/: fragmentShader.frag  vertexShader.vert
OpenGL/assets/shaders/instanced/: fragmentShader.frag  vertexShader.vert
OpenGL/include/: BoxTest.h  Camera2D.h  WindowHandler.h
OpenGL/src/: Shader.cpp  WindowHandler.cpp
OpenGL_GUI/: CMakeLists.txt  main.cpp
OpenGL_GUI/include/: Camera2D.h  GuiWorld.h  RectTest.h  TextRenderer.h  WindowHandler.h
OpenGL_GUI/src/: GuiWorld.cpp  Shader.cpp  TextRenderer.cpp  WindowHandler.cpp
Vulkan/: CMakeLists.txt  main.c  main.cpp
Vulkan/include/: Camera.h  ShaderBase.h  SwapChain.h  ThinDrawer.h  WindowHandler.h  definitions.h  thingsCreation.h
Vulkan/include/ShaderHeaders/: DebugCircle.h  DebugLine.h  DebugPolygon.h  VulkanTriangle.h
Vulkan/src/: BaseInit.cpp  Camera.cpp  Shader.cpp  ShaderBase.cpp  SwapChain.cpp  ThinDrawer.cpp  Utilities.cpp  WindowHandler.cpp  swapChain.c  thingsCreation.c
Vulkan/src/ShaderSources/: DebugCircle.cpp  DebugLine.cpp  DebugPolygon.cpp  VulkanTriangle.cpp
assets/jsons/: data.json
assets/shaders/DebugCircle/: fragment_shader.frag  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
assets/shaders/DebugLine/: fragment_shader.frag  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
assets/shaders/DebugPolygon/: fragment_shader.frag  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
assets/shaders/Rectangle/: fragmentShader.frag  vertexShader.vert
assets/shaders/Textured/: fragment_shader.frag  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
assets/shaders/VulkanDebugCircle/: fragment_shader.frag  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
assets/shaders/VulkanDebugLine/: fragment_shader.frag  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
assets/shaders/VulkanTriangle/: fragment_shader.frag  fragment_shader.frag.spv  vertex_shader.vert  vertex_shader.vert.spv
assets/shaders/basic/: fragmentShader.frag  vertexShader.vert
assets/shaders/font/: fragmentShader.frag  vertexShader.vert
assets/shaders/plane/: fragmentShader.frag  vertexShader.vert
assets/sounds/: data.json
include/: BoxTest.h  Camera2D.h  Shader.h  WindowHandler.h
src/: Camera2D.cpp  Shader.cpp  WindowHandler.cpp
